<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical"
    tools:context=".ui.neighbour_list.NeighbourInfoActivity">

<android.support.constraint.ConstraintLayout
    android:id="@+id/neighbour_infos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/neighbour_profile_picture"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account"
        android:contentDescription="@string/neighbour_profile_picture" />

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/arrow_back" />

    <TextView
        android:id="@+id/neighbour_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/neighbour_profile_picture"
        app:layout_constraintEnd_toStartOf="@+id/neighbour_favorite"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow_back"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/neighbour_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:clickable="true"
        android:contentDescription="@string/neighbour_favorite_btn"
        android:focusable="true"
        android:src="@drawable/ic_star_border_white_24dp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_border_shadow"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neighbour_profile_picture">

        <TextView
            android:id="@+id/neighbour_name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/neighbour_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_location_on_24"
            android:drawablePadding="18dp"
            android:paddingStart="18dp"
            android:paddingTop="16dp"
            android:paddingEnd="0dp"
            android:paddingBottom="16dp"
            android:text="@string/location"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/neighbour_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_local_phone_24"
            android:drawablePadding="18dp"
            android:paddingStart="18dp"
            android:paddingTop="16dp"
            android:paddingEnd="0dp"
            android:paddingBottom="16dp"
            android:text="@string/phone_number"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/neighbour_facebook_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_language_24"
            android:drawablePadding="18dp"
            android:paddingStart="18dp"
            android:paddingTop="16dp"
            android:paddingEnd="0dp"
            android:paddingBottom="16dp"
            android:text="@string/facebook_url"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_border_shadow"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:text="@string/aboutMe"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/neighbour_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/neighbour_description"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"/>

</android.support.constraint.ConstraintLayout>

</ScrollView>
